# FileSearch

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  WORKFLOW.md  Workflow.md
src/: banner.rs  main.rs  parser.rs
